changed hompage on package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://owl200.github.io/react-portfolio",
+  "homepage": "https://portfolio-5j9.pages.dev",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
